--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title> Portfolio Jonathas</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e674bba739.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo"></img>
+                <img src="images/222-removebg-preview.png" style="height: 200px; width: 220px;" class="logo"></img>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Sobre</a></li>
@@ -26,8 +26,8 @@
                 <i class="fas fa-bars"></i>
             </nav>
             <div class="header-text">
-                <p>Desenvolvedor Front-End</p>
-                <h1>Olá, Eu sou <span>Jonathas Olivera</span><br>Estudante de Programação e desenvolvedor Front-End</h1>
+                <p>Olá, Eu sou</p>
+                <h1><span>Jonathas Olivera</span><br></h1>
             </div>
         </div>
     </div>
@@ -56,19 +56,19 @@
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
                             <li><span>Desenvolvedor Web</span><br>Desenvolvimento Web/App interfaces</li>
-                            <li><span> Desenvolvimento Mobile</span><br>Desenvolvimento Mobile Ionic6 7 TypeScript</li>
+                            <li><span> Desenvolvimento Mobile</span><br>Desenvolvimento Mobile Ionic6 & TypeScript</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2021 - 2021</span><br>Desenvolv Mobile at Bassan Tecnologia</li>
+                            <li><span>2021-2021</span><br>Desenvolvedor Mobile at Bassan Tecnologia</li>
                             <li><span>2019-2021</span><br>Desenvolvimento Web at Ministerio Publico do Estado do Rio de Janeiro</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2016</span><br>Tecnico em informatica at INEP</li>
                             <li><span>2019-2023</span><br>Analise e Desenvolvimento de Sistemas at Universidade Anhanguera</li>
+                            <li><span>2016-2018</span><br>Tecnico em informatica at INEP</li>
                         </ul>
                     </div>
                 </div>
@@ -82,14 +82,14 @@
             <div class="services-list">
                 <div>
                     <i class="fa-brands fa-android"></i>
-                    <h2>Loja Virtual</h2>
+                    <h2>Desenvolvedor Web</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aliquam nam sit. Soluta quasi
                         officia, alias vitae fugiat fuga exercitationem.</p>
                     <a href="#">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Starbuks Landing</h2>
+                    <h2>Desenvolvedor Mobile</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aliquam nam sit. Soluta quasi
                         officia, alias vitae fugiat fuga exercitationem.</p>
                     <a href="#">Learn more</a>
@@ -98,7 +98,7 @@
                 <div>
 
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Tesla Landing</h2>
+                    <h2>Suporte Tecnico</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore aliquam nam sit. Soluta quasi
                         officia, alias vitae fugiat fuga exercitationem.</p>
                     <a href="#">Learn more</a>
@@ -157,7 +157,7 @@
                         <a href="#"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                     </div>
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="images/Jonathas+Curriculo.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form>
