--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <a href="" class="btn">See more</a>
+            <a href="" class="btn">Ver mais</a>
         </div>
     </div>
 
@@ -161,10 +161,10 @@
                 </div>
                 <div class="contact-right">
                     <form>
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="Email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn3">submit</button>
+                        <input type="text" name="Name" placeholder="Seu Nome" required>
+                        <input type="email" name="Email" placeholder="Seu Email Email" required>
+                        <textarea name="Message" rows="6" placeholder="Sua Messangem"></textarea>
+                        <button type="submit" class="btn btn3">Enviar</button>
                     </form>
                 </div>
             </div>
